# plover_system_switcher

./: README.md  README.rst  plover_system_switcher.py  setup.cfg
